	Added: 10_proftpd_tuning.pl listener file (removes the ServerIdent information, and forces TLS)
	Rewritten: 10_named_zonetransfer.pl listener file (now named 10_named_slave_provisioning.pl)
	Updated: 10_postfix_smarthost listener file (We need Cyrus SASL; Dovecot SASL impl. not supported by Postfix for smtp)

DAEMON
	Added: imscp_daemon.service systemd unit file
	Fixed: PID file /var/run/imscp_daemon.pid not readable (yet?) after start (systemd)
	Updated: Upstart init script according new daemon version - only one fork() call
	Updated: Version to 1.2.4

FRONTEND
	Changed: error_reporting configuration parameter no longer editable when using Apache2 ITK httpd server impl.
	Fixed: admin/settings.php menu state is not saved
	Fixed: Customer's PHP settings must be synchronized when updating PHP permissions of their resellers
	Fixed: Slow DOM content loading due to some built-in functions override (imscp.js)
	Fixed: Wrong alternative names in self-signed SSL certificates
	Fixed: Wrong edit link for domain alias DNS record (external mail DNS record)
	Removed: Default PHP configuration options - admin level (see errata file)
	Removed: Hosting plan feature - admin level (see errata file)

INSTALLER
	Added: Allow to specify package version to install in distribution package files
	Added: Conflict for procmail package to force its removal when running i-MSCP installer
	Added: Conflict for sasl2-bin package to force its removal when running i-MSCP installer (we don't need saslauthd)
	Added: Default administrator email in aliases(5) table for root account (e.g. root: <default_admin_email>)
	Added: Routine for upgrading SQL server system tables when necessary (e.g. MySQL Community Server)
	Added: Support for MySQL 5.6.x/5.7.x, Percona 5.7 and MariaDB 10.1 when available (see errata file)
	Added: Support for Ubuntu 16.04 (Xenial Xerus)
	Fixed: Could not type new password when reconfiguring service SQL users due to non-printable characters