@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 PIDFile=/var/run/imscp_daemon.pid
-ExecStart=/var/www/imscp/daemon/imscp_daemon -p /var/run/imscp_daemon.pid
+ExecStart=/var/www/imscp/daemon/imscp_daemon -b /var/www/imscp/engine/imscp-rqst-mngr -p /var/run/imscp_daemon.pid
 Restart=on-abort
 
 [Install]
