@@ -9,4 +9,4 @@ expect fork
 respawn
 respawn limit 2 5
 
-exec /var/www/imscp/daemon/imscp_daemon
+exec /var/www/imscp/daemon/imscp_daemon -b /var/www/imscp/engine/imscp-rqst-mngr
